@@ -8,60 +8,53 @@ import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.api.recipe.RecipeType;
-import mezz.jei.api.recipe.category.IRecipeCategory;
-import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.item.crafting.RecipeManager;
 import net.stln.magitech.Magitech;
 import net.stln.magitech.block.BlockInit;
 import net.stln.magitech.item.component.ComponentInit;
 import net.stln.magitech.item.component.MaterialComponent;
-import net.stln.magitech.item.tool.register.ToolMaterialRegister;
 import net.stln.magitech.recipe.PartCuttingRecipe;
 import net.stln.magitech.recipe.RecipeInit;
 import net.stln.magitech.recipe.ToolMaterialRecipe;
-import org.jetbrains.annotations.Nullable;
+import net.stln.magitech.util.ClientHelper;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
 
-public class PartCuttingRecipeCategory implements IRecipeCategory<PartCuttingRecipe> {
-    public static final ResourceLocation UID = ResourceLocation.fromNamespaceAndPath(Magitech.MOD_ID, "part_cutting");
-    public static final ResourceLocation TEXTURE = ResourceLocation.fromNamespaceAndPath(Magitech.MOD_ID,
-            "textures/gui/jei_widgets.png");
+public class PartCuttingRecipeCategory extends AbstractMagitechRecipeCategory<PartCuttingRecipe> {
+    public static final ResourceLocation UID = Magitech.id("part_cutting");
+    public static final ResourceLocation TEXTURE = Magitech.id("textures/gui/jei_widgets.png");
 
-    public static final RecipeType<PartCuttingRecipe> PART_CUTTING_RECIPE_TYPE =
-            new RecipeType<>(UID, PartCuttingRecipe.class);
+    public static final RecipeType<PartCuttingRecipe> PART_CUTTING_RECIPE_TYPE = new RecipeType<>(UID, PartCuttingRecipe.class);
 
-    private final IDrawable icon;
+    public PartCuttingRecipeCategory(IDrawable icon) {
+        super(icon);
+    }
 
     public PartCuttingRecipeCategory(IGuiHelper helper) {
-        this.icon = helper.createDrawableIngredient(VanillaTypes.ITEM_STACK, new ItemStack(BlockInit.ENGINEERING_WORKBENCH));
+        this(helper.createDrawableIngredient(VanillaTypes.ITEM_STACK, new ItemStack(BlockInit.ENGINEERING_WORKBENCH)));
     }
 
     @Override
-    public RecipeType<PartCuttingRecipe> getRecipeType() {
+    public @NotNull RecipeType<PartCuttingRecipe> getRecipeType() {
         return PART_CUTTING_RECIPE_TYPE;
     }
 
     @Override
-    public Component getTitle() {
+    public @NotNull Component getTitle() {
         return Component.translatable("recipe.magitech.part_cutting");
     }
 
     @Override
-    public @Nullable IDrawable getIcon() {
-        return icon;
-    }
-
-    @Override
-    public void draw(PartCuttingRecipe recipe, IRecipeSlotsView recipeSlotsView, GuiGraphics guiGraphics, double mouseX, double mouseY) {
-        IRecipeCategory.super.draw(recipe, recipeSlotsView, guiGraphics, mouseX, mouseY);
+    public void draw(@NotNull PartCuttingRecipe recipe, @NotNull IRecipeSlotsView recipeSlotsView, @NotNull GuiGraphics guiGraphics, double mouseX, double mouseY) {
+        super.draw(recipe, recipeSlotsView, guiGraphics, mouseX, mouseY);
         guiGraphics.blit(TEXTURE, 18, 4, 0, 0, 18, 18);
         guiGraphics.blit(TEXTURE, 40, 8, 0, 18, 21, 10);
         guiGraphics.blit(TEXTURE, 65, 4, 36, 0, 18, 18);
@@ -78,21 +71,18 @@ public class PartCuttingRecipeCategory implements IRecipeCategory<PartCuttingRec
     }
 
     @Override
-    public void setRecipe(IRecipeLayoutBuilder builder, PartCuttingRecipe recipe, IFocusGroup focuses) {
-        RecipeManager recipeManager = Minecraft.getInstance().level.getRecipeManager();
-
-        List<ToolMaterialRecipe> materialRecipes = recipeManager.getAllRecipesFor(RecipeInit.TOOL_MATERIAL_TYPE.get()).stream().map(RecipeHolder::value).toList();
+    protected void setRecipe(@NotNull IRecipeLayoutBuilder builder, @NotNull PartCuttingRecipe recipe, @NotNull IFocusGroup focuses, @NotNull RecipeManager recipeManager, @NotNull RegistryAccess access) {
+        List<ToolMaterialRecipe> materialRecipes = ClientHelper.getAllRecipes(RecipeInit.TOOL_MATERIAL_TYPE);
         List<ItemStack> inputs = new ArrayList<>();
         List<ItemStack> results = new ArrayList<>();
         for (ToolMaterialRecipe materialRecipe : materialRecipes) {
-            Ingredient ingredient = materialRecipe.getIngredients().get(0);
+            Ingredient ingredient = materialRecipe.getIngredients().getFirst();
             for (ItemStack itemStack : ingredient.getItems()) {
                 if (itemStack.isEmpty()) continue;
-                itemStack.setCount(recipe.getCount());
-                inputs.add(itemStack.copy());
+                inputs.add(itemStack.copyWithCount(recipe.inputCount()));
             }
-            ItemStack resultStack = recipe.getResultItem(null).copy();
-            resultStack.set(ComponentInit.MATERIAL_COMPONENT, new MaterialComponent(ToolMaterialRegister.getMaterial(materialRecipe.getResultId())));
+            ItemStack resultStack = recipe.getResultItem(access).copy();
+            resultStack.set(ComponentInit.MATERIAL_COMPONENT, new MaterialComponent(materialRecipe.getToolMaterial()));
             results.add(resultStack);
         }
         builder.addSlot(RecipeIngredientRole.INPUT, 19, 5).addItemStacks(inputs);
